--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,50 @@
-*{
-    margin: 0em;
+/* regla general para todos el documentos */
+*{  
+    margin: 0em; /*magen */
+    padding: 0em;
+}
+
+
+main{
+    width: 900px; /* ancho de main */
+    margin: auto; /*magenes automaticos */
+
+}
+
+header{
+    height: 100px;
+    width: 900px;
+    margin-top: 20px;
+    
+}
+
+.logo{
+    
+    width: 20%;
+    height: 100px;
+    background-color: tomato;
+    background-image: url(../img/Universidad_Escudo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    float: left;
+    background-position: center;
+   
+    
+   
+}
+
+ 
+
+
+
+.titulo{
+  
+    width: 80%;
+   float: left;
+   line-height: 100px;
+   text-align: center;
+   font-size: 40px;
+   font-weight: bold;
+   color: white;
+   background-color: rgb(0, 63, 100); 
 }
